--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>builder-pattern</module>
         <module>proxy-pattern</module>
         <module>adapter-pattern</module>
+        <module>decorator-pattern</module>
     </modules>
 
     <properties>
